@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-02-09"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20090209
-#define RUBY_PATCHLEVEL 110
+#define RUBY_PATCHLEVEL 111
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
